k8s_pratice/network/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name:  restapi3
   namespace: restapi
spec:
  podSelector:
    matchLabels:
      app: restapi
  policyTypes:
  - Ingress
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          name: ns-one
      podSelector:
        matchLabels:
          app: nginx1
    ports:
    - protocol: TCP
      port: 9090
